testcases/error/unresolvable_generic_argument.veryl
module unresolvable_generic_argument {
    const X: u32 = 1;
    inst u: unresolvable_generic_argument2::<X>;
}

module unresolvable_generic_argument2::<X: u32> {}
